# bulwer-lytton

./: .gitignore  README.md  Surprisal.ipynb  pyproject.toml
Surprisal/: Surprisal.ipynb
adjective-noun/: an-analysis.ipynb  an_df_dclm.tsv
data/: Bulwer-Lytton.tsv  DeepSeek_sents.txt  README.md  crowd-sample.txt  gpt-120b_sents.txt  gpt41-sents.txt  gpt5-sents.txt
humor_detection/: README.md  hr_roberta.py  humor-detection.ipynb  predict.py  util.py
literary_device_analysis/: README.md  assignment_analyze.ipynb  bl_assign.py  bl_generate.py  bl_refine.py  bl_util.py  util.py
literary_device_analysis/config/: config_humor_crowd.yml  config_humor_crowd_assign_PotD.yml  config_humor_crowd_assign_bulwer.yml  config_humor_crowd_assign_combo.yml  config_humor_crowd_assign_crowd.yml  config_humor_crowd_assign_gen_deepseek.yml  config_humor_crowd_assign_gen_gpt120b.yml  config_humor_crowd_assign_gen_gpt41.yml  config_humor_crowd_assign_gen_gpt5.yml
literary_device_analysis/data/input/: bulwer.jsonl  humor_crowd.jsonl  topicgpt_input_PotD.jsonl  topicgpt_input_combo.jsonl  topicgpt_input_crowd.jsonl  topicgpt_input_gen_deepseek.jsonl  topicgpt_input_gen_gpt120b.jsonl  topicgpt_input_gen_gpt41.jsonl  topicgpt_input_gen_gpt5.jsonl
literary_device_analysis/prompt/: assignment_humor.v2.txt  generation_1.txt  generation_humor.v2.txt  generation_humor_1.txt  refinement.txt  seed_humor.md  seed_humor.v2.md
oneshot-generation/: README.md  api-generate.py  batch_response_generate.py  local-generate.py  prompt_genres_list.txt  user-prompt-single.txt
(+11 files in other folders)
