[project]
name = "humor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.0.0",
    "ipdb>=0.13.13",
    "jupyter>=1.1.1",
    "llvmlite==0.44.0",
    "minicons>=0.3.32",
    "numpy>=2.3.2",
    "openai>=1.106.1",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "stanza>=1.10.1",
    "together>=1.5.25",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
